force-app/main/default/objects/Opportunity/fields/Package_Base_Price__c.field-meta.xml
<CustomField>
    <fullName>Package_Base_Price__c</fullName>
    <formula>Package__r.Base_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Package Base Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>