force-app/main/default/objects/Opportunity/fields/Package_Duration__c.field-meta.xml
<CustomField>
    <fullName>Package_Duration__c</fullName>
    <formula>Package__r.Duration_Days__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Package Duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>