force-app/main/default/objects/Opportunity/fields/Package_Type__c.field-meta.xml
<CustomField>
    <fullName>Package_Type__c</fullName>
    <label>Package Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Flight Only</fullName>
            </value>
            <value>
                <fullName>Hotel Only</fullName>
            </value>
            <value>
                <fullName>Flight+Hotel</fullName>
            </value>
            <value>
                <fullName>Full Package</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>