force-app/main/default/objects/Opportunity/fields/Travel_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Travel_Start_Date__c</fullName>
    <label>Travel Start Date</label>
    <type>Date</type>
</CustomField>