force-app/main/default/objects/Opportunity/validationRules/End_Date_After_Start.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Date_After_Start</fullName>
    <active>true</active>
    <errorConditionFormula>Travel_End_Date__c  &lt;  Travel_Start_Date__c</errorConditionFormula>
    <errorDisplayField>Travel_End_Date__c</errorDisplayField>
    <errorMessage>Travel End Date cannot be before Travel Start Date.</errorMessage>
</ValidationRule>